# peregrine-hypervision

./: .gitignore  CMakeLists.txt  build.sh  common.hpp  detector_main.hpp  main.cpp  option.hpp  run.sh
conf/: conf.json
conf/bruteforce/: charrdos-1024-test.json  httpscan.json  httpsscan.json  ntpscan.json  sqlscan.json  sshscan.json
conf/kitsune/: os-scan.json
conf/lrscan/: dns_lrscan.json  smtp_lrscan.json  snmp_lrscan.json  vlc_lrscan.json
conf/malware/: bitcoinminer.json  koler.json  mazarbot.json  mobidash.json  penetho.json  plankton.json  snojan.json  thbot.json  webcompanion.json
conf/misc/: ipidaddr.json  lrtcpdos02.json  lrtcpdos05.json  lrtcpdos10.json  spam100.json  sshpwdmd.json  sshpwdsm.json  telnetpwdmd.json
conf/web/: csfr.json  paraminject.json  persistence.json  scrapy.json  xss.json
configuration/bruteforce/: charrdos.json  cldaprdos.json  dnsrdos.json  dnsscan.json  httpscan.json  httpsscan.json  icmpscan.json  icmpsdos.json  memcachedrdos.json  ntprdos.json  ntpscan.json  riprdos.json  rstsdos.json  sqlscan.json  ssdprdos.json  sshscan.json  synsdos.json  udpsdos.json
configuration/lrscan/: dns_lrscan.json  http_lrscan.json  icmp_lrscan.json  netbios_lrscan.json  rdp_lrscan.json  smtp_lrscan.json  snmp_lrscan.json  ssh_lrscan.json  telnet_lrscan.json  vlc_lrscan.json
configuration/malware/: adload.json  bitcoinminer.json  ccleaner.json  coinminer.json  dridex.json  emotet.json  feiwo.json  koler.json  magic.json  mazarbot.json  mobidash.json  penetho.json  plankton.json  ransombo.json  sality.json  snojan.json  svpeng.json  thbot.json  trickbot.json  trickster.json  trojanminer.json  wannalocker.json  webcompanion.json  zsone.json
configuration/misc/: ackport.json  crossfirela.json  crossfiremd.json  crossfiresm.json  ipidaddr.json  ipidport.json  lrtcpdos02.json  lrtcpdos05.json  lrtcpdos10.json  spam1.json  spam100.json  spam50.json  sshpwdla.json  sshpwdmd.json  sshpwdsm.json  telnetpwdla.json  telnetpwdmd.json  telnetpwdsm.json
dataset_construct/: CMakeLists.txt  basic_dataset.cpp  basic_dataset.hpp
docker/: Dockerfile  docker-compose.yml  run.sh
flow_construct/: CMakeLists.txt  explicit_constructor.cpp  explicit_constructor.hpp  flow_define.hpp
graph_analyze/: CMakeLists.txt  detector_main.hpp  edge_constructor.cpp  edge_constructor.hpp  edge_constructor_new.cpp  edge_constructor_new.hpp  edge_define.cpp  edge_define.hpp  edge_define_new.cpp  edge_define_new.hpp  graph_analysis.cpp  graph_analysis_basic.cpp  graph_analysis_long.cpp  graph_analysis_short.cpp  graph_component.cpp  graph_construct.cpp  graph_define.cpp  graph_define.hpp
packet_parse/: CMakeLists.txt  fc.py  packet.cpp  packet.h  packet_basic.hpp  packet_info.hpp  packet_listener.cpp  packet_listener.hpp  pcap_parser.hpp  pcpp_common.hpp  sample.h
result_analyze/: batch_analyzer-single.py  batch_analyzer.py  configure.json
script/: rebuild.sh  run_all_brute.sh  run_all_lrscan.sh  run_all_malware.sh  run_all_misc.sh  run_all_web.sh
src/: common.hpp  dataset.cpp  dataset.hpp  edge_constructor.cpp  edge_constructor.hpp  edge_define.cpp  edge_define.hpp  flow.hpp  graph_analysis.cpp  graph_analysis_basic.cpp  graph_analysis_long.cpp  graph_analysis_short.cpp  graph_component.cpp  graph_construct.cpp  graph_define.cpp  graph_define.hpp  hypervision.cpp  hypervision.hpp  listener.cpp  listener.hpp  main.cpp  option.hpp  pkt_hdr.h  pkt_info.hpp  sample.h
(+249 files in other folders)
